# life-os

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  life-os-ARCHITECTURE.md  life-os-SPEC-FULL.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/core/: agent_errors.py  base.py  config.py  git.py  registry.py  responses.py  scheduler.py
backend/mcp_servers/: CATALOG.md  __init__.py  finance_server.py  payload_builders.py  proposals_service.py  proposals_store.py  read_server.py  reminders_server.py  tracing_server.py  write_server.py
backend/modules/activity/: __init__.py  router.py  schema.py  service.py
backend/modules/agent_proposals/: __init__.py  router.py
backend/modules/alerts/: __init__.py  router.py  schema.py  service.py
backend/modules/automation/: __init__.py  router.py  schema.py  service.py
backend/modules/brief/: __init__.py  reader.py  router.py  schema.py  service.py
backend/modules/career/: __init__.py  router.py  schema.py  seed.py  service.py
backend/modules/claude_usage/: __init__.py  pricing.py  reader.py  router.py  schema.py  service.py  transcripts.py
backend/modules/code_insight/: __init__.py  reader.py  repo_memory.py  router.py  schema.py  service.py
backend/modules/decision/: __init__.py  router.py  schema.py  service.py
backend/modules/decision_journal/: __init__.py  router.py  schema.py  service.py
backend/modules/dev_activity/: __init__.py  reader.py  router.py  schema.py  service.py  store.py
backend/modules/exchange/: __init__.py  reader.py  router.py  schema.py  service.py
backend/modules/finance/: __init__.py  router.py  schema.py  service.py
backend/modules/graveyard/: __init__.py  router.py  schema.py  service.py
backend/modules/journal/: __init__.py  router.py  schema.py  service.py
backend/modules/macro/: __init__.py  reader.py  router.py  schema.py  service.py  store.py
backend/modules/market/: __init__.py  reader.py  router.py  schema.py  service.py  ta.py
backend/modules/mcp_keys/: __init__.py  filter.py  router.py  schema.py  service.py
backend/modules/news/: __init__.py  reader.py  router.py  schema.py  service.py  store.py
backend/modules/notes/: __init__.py  router.py  schema.py  service.py
backend/modules/projects/: __init__.py  reader.py  router.py  schema.py  service.py
backend/modules/reliability/: __init__.py  router.py  schema.py  service.py
backend/modules/reminders/: __init__.py  reader.py  router.py  schema.py  service.py  store.py
backend/modules/settings/: __init__.py  router.py  schema.py  service.py
backend/modules/tracing/: __init__.py  reader.py  router.py  schema.py  service.py  store.py
backend/modules/wiki/: __init__.py  citations.py  proposals_schema.py  proposals_service.py  proposals_store.py  reader.py  router.py  schema.py  service.py  store.py  sync.py  sync_store.py
backend/modules/wiki/mcp/: README.md  __init__.py  read_server.py  write_server.py
backend/modules/wiki/reader/: __init__.py  _helpers.py  backlinks.py  context.py  graph.py  note_view.py  oplog.py  overview.py  project_notes.py  reindex.py  stale.py  suggest.py  tree.py
backend/modules/wiki/service/: __init__.py  _queue.py  apply.py  crud.py  errors.py  folders.py  import_notes.py  links.py  read.py  serialize.py
backend/modules/wiki/store/: __init__.py  _base.py  aliases.py  files.py  folder_meta.py  fts.py  links.py  notes.py  oplog.py  queries.py
backend/store/: db.py  md_store.py
backend/tests/: conftest.py  test_activity.py  test_agent_errors.py  test_agent_proposals_apply.py  test_alerts.py  test_automation.py  test_automation_api.py  test_brief.py  test_brief_api.py  test_brief_reminders.py  test_brief_tracing.py  test_brief_wiki_context.py  test_career_backend.py  test_claude_usage.py  test_claude_usage_api.py  test_code_insight.py  test_config.py  test_core_git.py  test_cors.py  test_db.py  test_decision.py  test_decision_journal.py  test_dev_activity.py  test_exchange.py  test_finance.py  test_finance_api.py  test_finance_assistant_p1.py  test_finance_enrichment.py  test_finance_mcp_server.py  test_finance_mcp_shape.py  test_finance_okx.py  test_graveyard.py  test_graveyard_api.py  test_health.py  test_journal.py  test_journal_api.py  test_journal_nudge.py  test_macro.py  test_market.py  test_market_api.py  (+70 more)
docs/: MCP-CONFIG.md  TEAMMATE-ORPHAN-PLAYBOOK.md  WIKI-LLM-SPEC.md  WIKI-SCREENS-FEATURES.md
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
sprints/: AUDIT_finance_q1-q8.md  BACKLOG_parked.md  DESIGN_WIKI-WORKDIR.md  OVERVIEW_wiki_llm.md  ROADMAP.md  end_sprint_0.md  end_sprint_1.md  end_sprint_100-LIFE-BRIEF-WIKI-LEAN.md  end_sprint_101-WIKI-FOLDER-SCOPE.md  end_sprint_102-TRACING-PERF.md  end_sprint_105-PROJECTS-CASE-INSENSITIVE.md  end_sprint_106-MACRO-ASOF-FINANCE-WARNINGS.md  end_sprint_107-SUGGEST-LINKS-RELEVANCE.md  end_sprint_108-WIKI-EXPLORER-REFRESH.md  end_sprint_109-FE-TEMPLATE-PICKER.md  end_sprint_109-TRACING-TEMPLATES.md  end_sprint_10A.md  end_sprint_10B.md  end_sprint_11.md  end_sprint_110-TRACING-LEAN-FORM.md  end_sprint_111-FE-REMINDER-CHANNEL.md  end_sprint_111-REMINDER-CHANNEL.md  end_sprint_112-PROJECTS-DEV-ACTIVITY.md  end_sprint_113-PROJECTS-AUTO-DISCOVER.md  end_sprint_114-PROJECTS-UNIFIED-TAB.md  end_sprint_115-SHARED-GIT-READER.md  end_sprint_116-OKX-MOCK-ISOLATION.md  end_sprint_117-REMINDCHANNEL-READBACK.md  end_sprint_118-CODE-INSIGHT-GIT.md  end_sprint_119-REMINDERS-DONE-FILTER.md  end_sprint_12.md  end_sprint_120-DEV-ACTIVITY-SUBTAB.md  end_sprint_121-DAY-NOTES.md  end_sprint_122-TRACING-2COL.md  end_sprint_123-DEVACTIVITY-REDESIGN.md  end_sprint_124-TEMPLATE-ADD.md  end_sprint_125-NOTE-ONESHOT.md  end_sprint_126-TRACING-TIMELINE.md  end_sprint_127-W1-WIKI-FOLDERS.md  (+306 more)
(+292 files in other folders)
