[project]
name = "life-os-backend"
version = "0.1.0"
description = "life-os backend — single-user personal command center (FastAPI + module/registry, md+git store, SQLite time-series, APScheduler)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "mcp>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

# PyYAML ships no type stubs (types-PyYAML not installed in this env). Unlike
# fully-missing imports (suppressed by ignore_missing_imports), a stub-less but
# importable package raises [import-untyped]; silence it per-module.
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py311"
