[project]
name = "life-os-backend"
version = "0.1.0"
description = "life-os backend — single-user personal command center (FastAPI + module/registry, md+git store, SQLite time-series, APScheduler)"
requires-python = ">=3.11"
dependencies = [
    # Cap <0.137: FastAPI 0.137 wraps included sub-routers in an _IncludedRouter
    # object that has no `.path`, breaking code/tests that iterate app.routes
    # (e.g. tests/test_registry.py::test_happy_module_is_mounted). Pin until that
    # iteration is made wrapper-aware.
    "fastapi>=0.110,<0.137",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "mcp>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "requests>=2.31",
]

# Flat-layout: real importable packages are core/modules/store (+ top-level
# main.py). data/ and tests/ are NOT distribution packages, so disable
# setuptools auto-discovery (which errors on the multi-top-level flat layout)
# and declare the package set explicitly.
[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "store*"]
exclude = ["tests*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# SUITE-SPEED (#58): `slow` marks live-server (real requests to :8686) + heavy perf tests.
# Default run EXCLUDES them (`-m "not slow"`) for fast, deterministic, offline dev runs — the
# live tests flake under full-suite contention (the test-activity httpx flake) + the perf tests
# are seconds each. NO coverage lost: the inclusive run (`pytest -m slow` for just those, or
# `pytest -o addopts=""` / `pytest -m ""` for the FULL set) still runs every test — the trim is a
# dev-speed convenience, the verification gate stays the full set. REVERSIBLE, no prod change.
markers = [
    "slow: live-server (:8686) or heavy perf test — excluded by default, run with `-m slow` or `-m ''`",
]
addopts = "-m 'not slow'"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

# PyYAML ships no type stubs (types-PyYAML not installed in this env). Unlike
# fully-missing imports (suppressed by ignore_missing_imports), a stub-less but
# importable package raises [import-untyped]; silence it per-module.
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py311"
